[package]
name = "rdpscanner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
